@@ -17,6 +17,7 @@
  */
 package com.twitter.distributedlog;
 
+import com.twitter.distributedlog.callback.LogSegmentListener;
 import com.twitter.util.Future;
 import java.io.IOException;
 
@@ -29,6 +30,23 @@ import java.io.IOException;
  * this class, which is created when the EditLog is first opened.
  */
 public interface DistributedLogManager extends MetadataAccessor {
+
+    /**
+     * Register <i>listener</i> on log segment updates of this stream.
+     *
+     * @param listener
+     *          listener to receive update log segment list.
+     */
+    public void registerListener(LogSegmentListener listener) throws IOException ;
+
+    /**
+     * Unregister <i>listener</i> on log segment updates from this stream.
+     *
+     * @param listener
+     *          listener to receive update log segment list.
+     */
+    public void unregisterListener(LogSegmentListener listener);
+
     /**
      * Begin writing to multiple partitions of the log stream identified by the name
      *
